--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Wrap the contents in the layout template. gulpfriendly.",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/test.js"
+    "test": "tape test/test.js",
+    "cov": "nyc npm test",
+    "codecov": "npm run cov && codecov"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
     "gulp-wrap": "^0.12.0"
   },
   "devDependencies": {
+    "codecov": "^1.0.1",
     "concat-stream": "^1.5.1",
     "gulp-front-matter": "^1.3.0",
     "nunjucks": "^2.4.2",
