--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/kt3k/layout-wrapper#readme",
   "dependencies": {
+    "consolidate": "^0.14.1",
     "gulp-wrap": "^0.12.0"
   },
   "devDependencies": {
